--- a/src/index.html
+++ b/src/index.html
@@ -196,7 +196,7 @@
       <!--Campaign-->
       <section class="top-campaign">
         <div class="inner">
-          <div class="top-campaign-swiper-button-relative">
+          <div class="top-campaign__swiper-button-relative">
             <div class="section-title-wrapper">
               <p class="section-title-en">Campaign</p>
               <h2 class="section-title-jp">キャンペーン</h2>
@@ -207,84 +207,76 @@
             </div>
           </div>
           <div class="swiper topCampaignSwiper" id="topCampaignSwiper">
-            <div class="swiper-wrapper top-campaign-wrapper">
-              <a href="#" class="swiper-slide top-campaign-slide">
+            <div class="swiper-wrapper top-campaign__wrapper">
+              <a href="#" class="swiper-slide top-campaign__slide">
                 <figure class="card__img card__img--campaign">
                   <img src="./assets/images/common/campaign1.png" alt="fish" />
                 </figure>
                 <div class="card__body card__body--campaign">
                   <div class="card__category">ライセンス講習</div>
-                  <div class="card__arrange">
-                    <div class="title-wrapper">
-                      <h3 class="title">ライセンス取得</h3>
-                    </div>
-                    <div class="card__contents">
-                      <p class="campaign-text">全部コミコミ(お一人様)</p>
-                      <div class="campaign-price-wrapper">
-                        <p class="campaign-pre-price">¥56,000</p>
-                        <p class="campaign-after-price">¥46,000</p>
-                      </div>
-                    </div>
+                  <div class="title-wrapper">
+                    <h3 class="title">ライセンス取得</h3>
+                  </div>
+                </div>
+                <div class="card__contents">
+                  <p class="campaign-text">全部コミコミ(お一人様)</p>
+                  <div class="campaign-price-wrapper">
+                    <p class="campaign-pre-price">¥56,000</p>
+                    <p class="campaign-after-price">¥46,000</p>
                   </div>
                 </div>
               </a>
-              <a href="#" class="swiper-slide top-campaign-slide">
+              <a href="#" class="swiper-slide top-campaign__slide">
                 <figure class="card__img card__img--campaign">
                   <img src="./assets/images/common/campaign2.png" alt="beach" />
                 </figure>
                 <div class="card__body card__body--campaign">
                   <div class="card__category">体験ダイビング</div>
-                  <div class="card__arrange">
-                    <div class="title-wrapper">
-                      <h3 class="title">貸切体験ダイビング</h3>
-                    </div>
-                    <div class="card__contents">
-                      <p class="campaign-text">全部コミコミ(お一人様)</p>
-                      <div class="campaign-price-wrapper">
-                        <p class="campaign-pre-price">¥24,000</p>
-                        <p class="campaign-after-price">¥18,000</p>
-                      </div>
-                    </div>
+                  <div class="title-wrapper">
+                    <h3 class="title">貸切体験ダイビング</h3>
+                  </div>
+                </div>
+                <div class="card__contents">
+                  <p class="campaign-text">全部コミコミ(お一人様)</p>
+                  <div class="campaign-price-wrapper">
+                    <p class="campaign-pre-price">¥24,000</p>
+                    <p class="campaign-after-price">¥18,000</p>
                   </div>
                 </div>
               </a>
-              <a href="#" class="swiper-slide top-campaign-slide">
+              <a href="#" class="swiper-slide top-campaign__slide">
                 <figure class="card__img card__img--campaign">
                   <img src="./assets/images/common/campaign3.png" alt="fish" />
                 </figure>
                 <div class="card__body card__body--campaign">
                   <div class="card__category">体験ダイビング</div>
-                  <div class="card__arrange">
-                    <div class="title-wrapper">
-                      <h3 class="title">ナイトダイビング</h3>
-                    </div>
-                    <div class="card__contents">
-                      <p class="campaign-text">全部コミコミ(お一人様)</p>
-                      <div class="campaign-price-wrapper">
-                        <p class="campaign-pre-price">¥10,000</p>
-                        <p class="campaign-after-price">¥8,000</p>
-                      </div>
-                    </div>
+                  <div class="title-wrapper">
+                    <h3 class="title">ナイトダイビング</h3>
+                  </div>
+                </div>
+                <div class="card__contents">
+                  <p class="campaign-text">全部コミコミ(お一人様)</p>
+                  <div class="campaign-price-wrapper">
+                    <p class="campaign-pre-price">¥10,000</p>
+                    <p class="campaign-after-price">¥8,000</p>
                   </div>
                 </div>
               </a>
-              <a href="#" class="swiper-slide top-campaign-slide">
+              <a href="#" class="swiper-slide top-campaign__slide">
                 <figure class="card__img card__img--campaign">
                   <img src="./assets/images/common/campaign4.png" alt="diving" />
                 </figure>
                 <div class="card__body card__body--campaign">
                   <div class="card__category">ファンダイビング</div>
-                  <div class="card__arrange">
-                    <div class="title-wrapper">
-                      <h3 class="title">貸切ファンダイビング</h3>
-                    </div>
-                    <div class="card__contents">
-                      <p class="campaign-text">全部コミコミ(お一人様)</p>
-                      <div class="campaign-price-wrapper">
-                        <p class="campaign-pre-price">¥20,000</p>
-                        <p class="campaign-after-price">¥16,000</p>
-                      </div>
-                    </div>
+                  <div class="title-wrapper">
+                    <h3 class="title">貸切ファンダイビング</h3>
+                  </div>
+                </div>
+                <div class="card__contents">
+                  <p class="campaign-text">全部コミコミ(お一人様)</p>
+                  <div class="campaign-price-wrapper">
+                    <p class="campaign-pre-price">¥20,000</p>
+                    <p class="campaign-after-price">¥16,000</p>
                   </div>
                 </div>
               </a>
@@ -317,7 +309,7 @@
             </div>
             <div class="top-about-us__texts">
               <p class="top-about-us__main-text">Dive into<br />the Ocean</p>
-              <div class="top-about-us__text">
+              <div class="about-us__text">
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
                 <div class="btn-wrapper btn-wrapper--about">
                   <a href="#" class="btn"
@@ -328,7 +320,7 @@
               </div>
             </div>
           </div>
-          <div class="top-about-us-decoration"><img src="./assets/images/common/about-us-decoratoin.png" alt="coral&sea-anemone" /></div>
+          <div class="top-about-us__decoration"><img src="./assets/images/common/about-us-decoratoin.png" alt="coral&sea-anemone" /></div>
         </div>
         <!--inner閉じタグ-->
       </section>
@@ -342,7 +334,7 @@
               <div class="top-info__img colorbox"><img src="./assets/images/common/information.png" alt="fish-and-sea" /></div>
               <div class="info__content">
                 <h3 class="title title--info">ライセンス講習</h3>
-                <div class="info-text">
+                <div class="info__text">
                   当店はダイビングライセンス（Cカード）世界最大の教育機関PADIの「正規店」として店舗登録されています。<br />
                   正規登録店として、安心安全に初めての方でも安心安全にライセンス取得をサポート致します。
                 </div>
@@ -360,12 +352,12 @@
       <!--Blog-->
       <section class="top-blog">
         <div class="inner">
-          <div class="top-blog-decoration"><img src="./assets/images/common/decoration-fish-white.png" alt="decoration-fish" /></div>
+          <div class="top-blog__decoration"><img src="./assets/images/common/decoration-fish-white.png" alt="decoration-fish" /></div>
           <div class="section-title-wrapper">
             <p class="section-title-en section-title-en--white">Blog</p>
             <h2 class="section-title-jp section-title-jp--white">ブログ</h2>
           </div>
-          <div class="top-blog-cards-wrapper">
+          <div class="top-blog__cards-wrapper">
             <div class="cards cards--3cards">
               <a href="#" class="card">
                 <figure class="card__img card__img--blog">
@@ -410,12 +402,12 @@
       <!--Voice-->
       <section class="top-voice">
         <div class="inner">
-          <div class="top-voice-decoration-upper"><img src="./assets/images/common/decoration-fish-right.svg" alt="decoration-fish" /></div>
+          <div class="top-voice__decoration-upper"><img src="./assets/images/common/decoration-fish-right.svg" alt="decoration-fish" /></div>
           <div class="section-title-wrapper">
             <p class="section-title-en">Voice</p>
             <h2 class="section-title-jp">お客様の声</h2>
           </div>
-          <div class="top-voice-card-wrapper">
+          <div class="top-voice__card-wrapper">
             <div class="cards cards--voice">
               <div class="card card--voice">
                 <div class="card__info">
@@ -462,7 +454,7 @@
             </a>
           </div>
         </div>
-        <div class="top-voice-decoration-under"><img src="./assets/images/common/decoration-dragon-fish.png" alt="decoration-dragon-fish" /></div>
+        <div class="top-voice__decoration-under"><img src="./assets/images/common/decoration-dragon-fish.png" alt="decoration-dragon-fish" /></div>
       </section>
       <!--price-->
       <section class="top-price-section">
@@ -471,74 +463,74 @@
             <p class="section-title-en">Price</p>
             <h2 class="section-title-jp">料金一覧</h2>
           </div>
-          <div class="top-price-contents-wrapper">
-            <picture class="top-price-img colorbox">
+          <div class="top-price__contents-wrapper">
+            <picture class="top-price__img colorbox">
               <source srcset="./assets/images/common/price-pc.png" media="(min-width: 768px)" type="image/jpg" />
               <source srcset="./assets/images/common/price-sp.png" media="(max-width: 767px)" type="image/png" />
               <img src="./assets/images/common/price-sp.png" alt="sea-turtle " />
             </picture>
-            <div class="top-price-contents">
-              <dl class="top-price-content">
+            <div class="top-price__contents">
+              <dl class="top-price__content">
                 <dt class="title title--price">ライセンス講習</dt>
-                <dd class="top-price-menus">
-                  <div class="top-price-menu">オープンウォーターダイバーコース</div>
+                <dd class="top-price__menus">
+                  <div class="top-price__menu">オープンウォーターダイバーコース</div>
                   <div class="top-price">¥50,000</div>
                 </dd>
-                <dd class="top-price-menus">
-                  <div class="top-price-menu">アドバンスドオープンウォーターコース</div>
+                <dd class="top-price__menus">
+                  <div class="top-price__menu">アドバンスドオープンウォーターコース</div>
                   <div class="top-price">¥60,000</div>
                 </dd>
-                <dd class="top-price-menus">
-                  <div class="top-price-menu">レスキュー＋EFRコース</div>
+                <dd class="top-price__menus">
+                  <div class="top-price__menu">レスキュー＋EFRコース</div>
                   <div class="top-price">¥70,000</div>
                 </dd>
               </dl>
-              <dl class="top-price-content">
+              <dl class="top-price__content">
                 <dt class="title title--price">体験ダイビング</dt>
-                <dd class="top-price-menus">
-                  <div class="top-price-menu">ビーチ体験ダイビング(半日)</div>
+                <dd class="top-price__menus">
+                  <div class="top-price__menu">ビーチ体験ダイビング(半日)</div>
                   <div class="top-price">¥7,000</div>
                 </dd>
-                <dd class="top-price-menus">
-                  <div class="top-price-menu">ビーチ体験ダイビング(1日)</div>
+                <dd class="top-price__menus">
+                  <div class="top-price__menu">ビーチ体験ダイビング(1日)</div>
                   <div class="top-price">¥14,000</div>
                 </dd>
-                <dd class="top-price-menus">
-                  <div class="top-price-menu">ボート体験ダイビング(半日)</div>
+                <dd class="top-price__menus">
+                  <div class="top-price__menu">ボート体験ダイビング(半日)</div>
                   <div class="top-price">¥10,000</div>
                 </dd>
-                <dd class="top-price-menus">
-                  <div class="top-price-menu">ボート体験ダイビング(1日)</div>
+                <dd class="top-price__menus">
+                  <div class="top-price__menu">ボート体験ダイビング(1日)</div>
                   <div class="top-price">¥18,000</div>
                 </dd>
               </dl>
-              <dl class="top-price-content">
+              <dl class="top-price__content">
                 <dt class="title title--price">ファンダイビング</dt>
-                <dd class="top-price-menus">
-                  <div class="top-price-menu">ビーチダイビング(2ダイブ)</div>
+                <dd class="top-price__menus">
+                  <div class="top-price__menu">ビーチダイビング(2ダイブ)</div>
                   <div class="top-price">¥14,000</div>
                 </dd>
-                <dd class="top-price-menus">
-                  <div class="top-price-menu">ボートダイビング(2ダイブ)</div>
+                <dd class="top-price__menus">
+                  <div class="top-price__menu">ボートダイビング(2ダイブ)</div>
                   <div class="top-price">¥18,000</div>
                 </dd>
-                <dd class="top-price-menus">
-                  <div class="top-price-menu">スペシャルダイビング(2ダイブ)</div>
+                <dd class="top-price__menus">
+                  <div class="top-price__menu">スペシャルダイビング(2ダイブ)</div>
                   <div class="top-price">¥24,000</div>
                 </dd>
-                <dd class="top-price-menus">
-                  <div class="top-price-menu">ナイトダイビング(1ダイブ)</div>
+                <dd class="top-price__menus">
+                  <div class="top-price__menu">ナイトダイビング(1ダイブ)</div>
                   <div class="top-price">¥10,000</div>
                 </dd>
               </dl>
-              <dl class="top-price-content">
+              <dl class="top-price__content">
                 <dt class="title title--price">スペシャルダイビング</dt>
-                <dd class="top-price-menus">
-                  <div class="top-price-menu">貸切ダイビング(2ダイブ)</div>
+                <dd class="top-price__menus">
+                  <div class="top-price__menu">貸切ダイビング(2ダイブ)</div>
                   <div class="top-price">¥24,000</div>
                 </dd>
-                <dd class="top-price-menus">
-                  <div class="top-price-menu">1日ダイビング(3ダイブ)</div>
+                <dd class="top-price__menus">
+                  <div class="top-price__menu">1日ダイビング(3ダイブ)</div>
                   <div class="top-price">¥32,000</div>
                 </dd>
               </dl>
@@ -550,7 +542,7 @@
               <span></span>
             </a>
           </div>
-          <div class="top-price-decoration"><img src="./assets/images/common/decoration-fish.png" alt="decoration-fish" /></div>
+          <div class="top-price__decoration"><img src="./assets/images/common/decoration-fish.png" alt="decoration-fish" /></div>
         </div>
       </section>
       <!--contact-->
