--- a/src/index.html
+++ b/src/index.html
@@ -32,11 +32,32 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./assets/js/jquery.inview.min.js"></script>
+    <script defer src="./assets/js/gsap.js"></script>
     <script defer src="./assets/js/script.js"></script>
   </head>
   <body>
     <!--header-->
     <header class="header">
+      <div class="loading-wrapper">
+        <div class="loading-start">
+          <div class="FV-texts FV-texts--loading">
+            <h1 class="FV-main-text">DIVING</h1>
+            <p class="FV-sub-text">into the ocean</p>
+          </div>
+        </div>
+        <div class="loading" id="loading">
+          <div class="loading-flex">
+            <div class="loading-left"></div>
+            <div class="loading-right"></div>
+          </div>
+        </div>
+        <div class="loading-turtle">
+          <div class="FV-texts">
+            <h1 class="FV-main-text">DIVING</h1>
+            <p class="FV-sub-text">into the ocean</p>
+          </div>
+        </div>
+      </div>
       <div class="header-inner">
         <div class="logo logo--header"><img src="./assets/images/common/logo.png" alt="logo" /></div>
         <div class="header__content">
