--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
           </div>
         </div>
       </div>
-      <div class="header-inner">
+      <div class="header__inner">
         <div class="logo logo--header"><img src="./assets/images/common/logo.png" alt="logo" /></div>
         <div class="header__content">
           <div class="hamburger" id="hamburger"><span></span><span></span><span></span></div>
@@ -66,65 +66,65 @@
             <ul>
               <li>
                 <a href="#">
-                  <div class="section-title-wrapper">
-                    <p class="header-title-en">Campaign</p>
-                    <p class="header-title-jp">キャンペーン</p>
+                  <div class="section__title-wrapper">
+                    <p class="header__title-en">Campaign</p>
+                    <p class="header__title-jp">キャンペーン</p>
                   </div>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <div class="section-title-wrapper">
-                    <p class="header-title-en">About us</p>
-                    <p class="header-title-jp">私たちについて</p>
+                  <div class="section__title-wrapper">
+                    <p class="header__title-en">About us</p>
+                    <p class="header__title-jp">私たちについて</p>
                   </div>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <div class="section-title-wrapper">
-                    <p class="header-title-en">Information</p>
-                    <p class="header-title-jp">ダイビング情報</p>
+                  <div class="section__title-wrapper">
+                    <p class="header__title-en">Information</p>
+                    <p class="header__title-jp">ダイビング情報</p>
                   </div>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <div class="section-title-wrapper">
-                    <p class="header-title-en">Blog</p>
-                    <p class="header-title-jp">ブログ</p>
+                  <div class="section__title-wrapper">
+                    <p class="header__title-en">Blog</p>
+                    <p class="header__title-jp">ブログ</p>
                   </div>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <div class="section-title-wrapper">
-                    <p class="header-title-en">Voice</p>
-                    <p class="header-title-jp">お客様の声</p>
+                  <div class="section__title-wrapper">
+                    <p class="header__title-en">Voice</p>
+                    <p class="header__title-jp">お客様の声</p>
                   </div>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <div class="section-title-wrapper">
-                    <p class="header-title-en">Price</p>
-                    <p class="header-title-jp">料金一覧</p>
+                  <div class="section__title-wrapper">
+                    <p class="header__title-en">Price</p>
+                    <p class="header__title-jp">料金一覧</p>
                   </div>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <div class="section-title-wrapper">
-                    <p class="header-title-en">FAQ</p>
-                    <p class="header-title-jp">よくある質問</p>
+                  <div class="section__title-wrapper">
+                    <p class="header__title-en">FAQ</p>
+                    <p class="header__title-jp">よくある質問</p>
                   </div>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <div class="section-title-wrapper">
-                    <p class="header-title-en">Contact</p>
-                    <p class="header-title-jp">お問い合わせ</p>
+                  <div class="section__title-wrapper">
+                    <p class="header__title-en">Contact</p>
+                    <p class="header__title-jp">お問い合わせ</p>
                   </div>
                 </a>
               </li>
@@ -134,51 +134,51 @@
       </div>
       <div class="sp-nav">
         <div class="inner inner--sp-nav">
-          <div class="siteMap-contents siteMap-contents--header">
+          <div class="siteMap__contents siteMap__contents--header">
             <div class="siteMap__sp-layout">
-              <div class="siteMap-content">
-                <div class="siteMap-main-title"><a href="#">キャンペーン</a></div>
-                <div class="siteMap-sub">
+              <div class="siteMap__content">
+                <div class="siteMap__main-title"><a href="#">キャンペーン</a></div>
+                <div class="siteMap__sub">
                   <ul>
-                    <li class="siteMap-sub-title"><a href="#">ライセンス取得</a></li>
-                    <li class="siteMap-sub-title"><a href="#">貸切体験ダイビング</a></li>
-                    <li class="siteMap-sub-title"><a href="#">ナイトダイビング</a></li>
+                    <li class="siteMap__sub-title"><a href="#">ライセンス取得</a></li>
+                    <li class="siteMap__sub-title"><a href="#">貸切体験ダイビング</a></li>
+                    <li class="siteMap__sub-title"><a href="#">ナイトダイビング</a></li>
                   </ul>
                 </div>
-                <div class="siteMap-main-title"><a href="#">私たちについて</a></div>
+                <div class="siteMap__main-title"><a href="#">私たちについて</a></div>
               </div>
-              <div class="siteMap-main">
-                <div class="siteMap-main-title"><a href="#">ダイビング情報</a></div>
-                <div class="siteMap-sub">
+              <div class="siteMap__main">
+                <div class="siteMap__main-title"><a href="#">ダイビング情報</a></div>
+                <div class="siteMap__sub">
                   <ul>
-                    <li class="siteMap-sub-title"><a href="#">ライセンス講習</a></li>
-                    <li class="siteMap-sub-title"><a href="#">体験ダイビング</a></li>
-                    <li class="siteMap-sub-title"><a href="#">ファンダイビング</a></li>
+                    <li class="siteMap__sub-title"><a href="#">ライセンス講習</a></li>
+                    <li class="siteMap__sub-title"><a href="#">体験ダイビング</a></li>
+                    <li class="siteMap__sub-title"><a href="#">ファンダイビング</a></li>
                   </ul>
                 </div>
-                <div class="siteMap-main-title"><a href="#">ブログ</a></div>
+                <div class="siteMap__main-title"><a href="#">ブログ</a></div>
               </div>
             </div>
             <div class="siteMap__sp-layout">
-              <div class="siteMap-main">
-                <div class="siteMap-main-title"><a href="#">お客様の声</a></div>
-                <div class="siteMap-main-title"><a href="#">料金一覧</a></div>
-                <div class="siteMap-sub">
+              <div class="siteMap__main">
+                <div class="siteMap__main-title"><a href="#">お客様の声</a></div>
+                <div class="siteMap__main-title"><a href="#">料金一覧</a></div>
+                <div class="siteMap__sub">
                   <ul>
-                    <li class="siteMap-sub-title"><a href="#">ライセンス講習</a></li>
-                    <li class="siteMap-sub-title"><a href="#">体験ダイビング</a></li>
-                    <li class="siteMap-sub-title"><a href="#">ファンダイビング</a></li>
+                    <li class="siteMap__sub-title"><a href="#">ライセンス講習</a></li>
+                    <li class="siteMap__sub-title"><a href="#">体験ダイビング</a></li>
+                    <li class="siteMap__sub-title"><a href="#">ファンダイビング</a></li>
                   </ul>
                 </div>
               </div>
 
-              <ul class="siteMap-main">
-                <li class="siteMap-main-title"><a href="#">よくある質問</a></li>
-                <li class="siteMap-main-title">
+              <ul class="siteMap__main">
+                <li class="siteMap__main-title"><a href="#">よくある質問</a></li>
+                <li class="siteMap__main-title">
                   <a href="#">プライバシー<br class="pc-none" />ポリシー</a>
                 </li>
-                <li class="siteMap-main-title"><a href="#">利用規約</a></li>
-                <li class="siteMap-main-title"><a href="#">お問い合わせ</a></li>
+                <li class="siteMap__main-title"><a href="#">利用規約</a></li>
+                <li class="siteMap__main-title"><a href="#">お問い合わせ</a></li>
               </ul>
             </div>
           </div>
@@ -219,9 +219,9 @@
       <section class="top-campaign">
         <div class="inner">
           <div class="top-campaign__swiper-button-relative">
-            <div class="section-title-wrapper">
-              <p class="section-title-en">Campaign</p>
-              <h2 class="section-title-jp">キャンペーン</h2>
+            <div class="section__title-wrapper">
+              <p class="section__title-en">Campaign</p>
+              <h2 class="section__title-jp">キャンペーン</h2>
             </div>
             <div class="top-campaign__swiper-button-wrapper">
               <div class="top-campaign__swiper-button-prev"></div>
@@ -316,9 +316,9 @@
       <!--About us-->
       <section class="top-about-us">
         <div class="inner">
-          <div class="section-title-wrapper">
-            <p class="section-title-en">About us</p>
-            <h2 class="section-title-jp">私たちについて</h2>
+          <div class="section__title-wrapper">
+            <p class="section__title-en">About us</p>
+            <h2 class="section__title-jp">私たちについて</h2>
           </div>
           <div class="top-about-us__img-wrapper">
             <div class="about-us__img">
@@ -349,9 +349,9 @@
       <!--Information-->
       <section class="top-info">
         <div class="inner">
-          <div class="section-title-wrapper">
-            <p class="section-title-en">Information</p>
-            <h2 class="section-title-jp">ダイビング情報</h2>
+          <div class="section__title-wrapper">
+            <p class="section__title-en">Information</p>
+            <h2 class="section__title-jp">ダイビング情報</h2>
             <div class="top-info-wrapper">
               <div class="top-info__img colorbox"><img src="./assets/images/common/information.png" alt="fish-and-sea" /></div>
               <div class="info__content">
@@ -375,9 +375,9 @@
       <section class="top-blog">
         <div class="inner">
           <div class="top-blog__decoration"><img src="./assets/images/common/decoration-fish-white.png" alt="decoration-fish" /></div>
-          <div class="section-title-wrapper">
-            <p class="section-title-en section-title-en--white">Blog</p>
-            <h2 class="section-title-jp section-title-jp--white">ブログ</h2>
+          <div class="section__title-wrapper">
+            <p class="section__title-en section__title-en--white">Blog</p>
+            <h2 class="section__title-jp section__title-jp--white">ブログ</h2>
           </div>
           <div class="top-blog__cards-wrapper">
             <div class="cards cards--3cards">
@@ -425,9 +425,9 @@
       <section class="top-voice">
         <div class="inner">
           <div class="top-voice__decoration-upper"><img src="./assets/images/common/decoration-fish-right.svg" alt="decoration-fish" /></div>
-          <div class="section-title-wrapper">
-            <p class="section-title-en">Voice</p>
-            <h2 class="section-title-jp">お客様の声</h2>
+          <div class="section__title-wrapper">
+            <p class="section__title-en">Voice</p>
+            <h2 class="section__title-jp">お客様の声</h2>
           </div>
           <div class="top-voice__cards-wrapper">
             <div class="cards cards--voice">
@@ -481,9 +481,9 @@
       <!--price-->
       <section class="top-price-section">
         <div class="inner">
-          <div class="section-title-wrapper">
-            <p class="section-title-en">Price</p>
-            <h2 class="section-title-jp">料金一覧</h2>
+          <div class="section__title-wrapper">
+            <p class="section__title-en">Price</p>
+            <h2 class="section__title-jp">料金一覧</h2>
           </div>
           <div class="top-price__contents-wrapper">
             <picture class="top-price__img colorbox">
@@ -588,10 +588,10 @@
                 </div>
               </div>
               <div class="contact__content">
-                <div class="section-title-wrapper">
-                  <p class="section-title-en section-title-en--big">Contact</p>
+                <div class="section__title-wrapper">
+                  <p class="section__title-en section__title-en--big">Contact</p>
                 </div>
-                <h2 class="section-title-jp section-title-jp--shadow">お問い合わせ</h2>
+                <h2 class="section__title-jp section__title-jp--shadow">お問い合わせ</h2>
                 <p class="contact-text">ご予約・お問い合わせはコチラ</p>
                 <div class="btn-wrapper btn-wrapper--in-content">
                   <a href="#" class="btn"
@@ -624,51 +624,50 @@
             </div>
           </div>
         </div>
-        <div class="siteMap-contents">
+        <div class="siteMap__contents">
           <div class="siteMap__sp-layout">
-            <div class="siteMap-content">
-              <div class="siteMap-main-title"><a href="#">キャンペーン</a></div>
-              <div class="siteMap-sub">
+            <div class="siteMap__content">
+              <div class="siteMap__main-title"><a href="#">キャンペーン</a></div>
+              <div class="siteMap__sub">
                 <ul>
-                  <li class="siteMap-sub-title"><a href="#">ライセンス取得</a></li>
-                  <li class="siteMap-sub-title"><a href="#">貸切体験ダイビング</a></li>
-                  <li class="siteMap-sub-title"><a href="#">ナイトダイビング</a></li>
+                  <li class="siteMap__sub-title"><a href="#">ライセンス取得</a></li>
+                  <li class="siteMap__sub-title"><a href="#">貸切体験ダイビング</a></li>
+                  <li class="siteMap__sub-title"><a href="#">ナイトダイビング</a></li>
                 </ul>
               </div>
-              <div class="siteMap-main-title"><a href="#">私たちについて</a></div>
+              <div class="siteMap__main-title"><a href="#">私たちについて</a></div>
             </div>
-            <div class="siteMap-main">
-              <div class="siteMap-main-title"><a href="#">ダイビング情報</a></div>
-              <div class="siteMap-sub">
+            <div class="siteMap__main">
+              <div class="siteMap__main-title"><a href="#">ダイビング情報</a></div>
+              <div class="siteMap__sub">
                 <ul>
-                  <li class="siteMap-sub-title"><a href="#">ライセンス講習</a></li>
-                  <li class="siteMap-sub-title"><a href="#">体験ダイビング</a></li>
-                  <li class="siteMap-sub-title"><a href="#">ファンダイビング</a></li>
+                  <li class="siteMap__sub-title"><a href="#">ライセンス講習</a></li>
+                  <li class="siteMap__sub-title"><a href="#">体験ダイビング</a></li>
+                  <li class="siteMap__sub-title"><a href="#">ファンダイビング</a></li>
                 </ul>
               </div>
-              <div class="siteMap-main-title"><a href="#">ブログ</a></div>
+              <div class="siteMap__main-title"><a href="#">ブログ</a></div>
             </div>
           </div>
           <div class="siteMap__sp-layout">
-            <div class="siteMap-main">
-              <div class="siteMap-main-title"><a href="#">お客様の声</a></div>
-              <div class="siteMap-main-title"><a href="#">料金一覧</a></div>
-              <div class="siteMap-sub">
+            <div class="siteMap__main">
+              <div class="siteMap__main-title"><a href="#">お客様の声</a></div>
+              <div class="siteMap__main-title"><a href="#">料金一覧</a></div>
+              <div class="siteMap__sub">
                 <ul>
-                  <li class="siteMap-sub-title"><a href="#">ライセンス講習</a></li>
-                  <li class="siteMap-sub-title"><a href="#">体験ダイビング</a></li>
-                  <li class="siteMap-sub-title"><a href="#">ファンダイビング</a></li>
+                  <li class="siteMap__sub-title"><a href="#">ライセンス講習</a></li>
+                  <li class="siteMap__sub-title"><a href="#">体験ダイビング</a></li>
+                  <li class="siteMap__sub-title"><a href="#">ファンダイビング</a></li>
                 </ul>
               </div>
             </div>
-
-            <ul class="siteMap-main">
-              <li class="siteMap-main-title"><a href="#">よくある質問</a></li>
-              <li class="siteMap-main-title">
+            <ul class="siteMap__main">
+              <li class="siteMap__main-title"><a href="#">よくある質問</a></li>
+              <li class="siteMap__main-title">
                 <a href="#">プライバシー<br class="pc-none" />ポリシー</a>
               </li>
-              <li class="siteMap-main-title"><a href="#">利用規約</a></li>
-              <li class="siteMap-main-title"><a href="#">お問い合わせ</a></li>
+              <li class="siteMap__main-title"><a href="#">利用規約</a></li>
+              <li class="siteMap__main-title"><a href="#">お問い合わせ</a></li>
             </ul>
           </div>
         </div>
