--- a/src/index.html
+++ b/src/index.html
@@ -40,9 +40,9 @@
     <header class="header">
       <div class="loading-wrapper">
         <div class="loading-start">
-          <div class="FV-texts FV-texts--loading">
-            <h1 class="FV-main-text">DIVING</h1>
-            <p class="FV-sub-text">into the ocean</p>
+          <div class="topFV-texts topFV-texts--loading">
+            <h1 class="topFV-main-text">DIVING</h1>
+            <p class="topFV-sub-text">into the ocean</p>
           </div>
         </div>
         <div class="loading" id="loading">
@@ -52,9 +52,9 @@
           </div>
         </div>
         <div class="loading-turtle">
-          <div class="FV-texts">
-            <h1 class="FV-main-text">DIVING</h1>
-            <p class="FV-sub-text">into the ocean</p>
+          <div class="topFV-texts">
+            <h1 class="topFV-main-text">DIVING</h1>
+            <p class="topFV-sub-text">into the ocean</p>
           </div>
         </div>
       </div>
@@ -187,33 +187,33 @@
     </header>
     <main>
       <!--first-view-->
-      <div class="swiper FVswiper" id="FVswiper">
-        <div class="FV-wrapper swiper-wrapper">
-          <picture class="swiper-slide FVswiper-slide">
+      <div class="swiper topFVswiper" id="topFV-swiper">
+        <div class="topFV-wrapper swiper-wrapper">
+          <picture class="swiper-slide topFV-swiper-slide">
             <source srcset="./assets/images/common/FV-pc1.png" media="(min-width: 768px)" />
             <source srcset="./assets/images/common/FV-sp1.png" media="(min-width: 767px)" />
             <img src="./assets/images/common/FV-sp1.png" alt="sea-turtle"
           /></picture>
-          <picture class="swiper-slide FVswiper-slide">
+          <picture class="swiper-slide topFV-swiper-slide">
             <source srcset="./assets/images/common/FV-pc2.png" media="(min-width: 768px)" />
             <source srcset="./assets/images/common/FV-sp2.png" media="(min-width: 767px)" />
             <img src="./assets/images/common/FV-sp2.png" alt="diving"
           /></picture>
-          <picture class="swiper-slide FVswiper-slide">
+          <picture class="swiper-slide topFV-swiper-slide">
             <source srcset="./assets/images/common/FV-pc3.png" media="(min-width: 768px)" />
             <source srcset="./assets/images/common/FV-sp3.png" media="(min-width: 767px)" />
             <img src="./assets/images/common/FV-sp3.png" alt="sea"
           /></picture>
-          <picture class="swiper-slide FVswiper-slide">
+          <picture class="swiper-slide topFV-swiper-slide">
             <source srcset="./assets/images/common/FV-pc4.png" media="(min-width: 768px)" />
             <source srcset="./assets/images/common/FV-sp4.png" media="(min-width: 767px)" />
             <img src="./assets/images/common/FV-sp4.png" alt="beach"
           /></picture>
         </div>
       </div>
-      <div class="FV-texts">
-        <h1 class="FV-main-text">DIVING</h1>
-        <p class="FV-sub-text">into the ocean</p>
+      <div class="topFV-texts">
+        <h1 class="topFV-main-text">DIVING</h1>
+        <p class="topFV-sub-text">into the ocean</p>
       </div>
       <!--Campaign-->
       <section class="top-campaign">
@@ -672,7 +672,7 @@
           </div>
         </div>
       </div>
-      <div class="copy">Copyright © 2021 - 2023 CodeUps LLC. All Rights Reserved.</div>
+      <div class="footer__copy">Copyright © 2021 - 2023 CodeUps LLC. All Rights Reserved.</div>
     </footer>
   </body>
 </html>
